Latests LVGL + eSPI working properly with R61529

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,4 @@ platform = ststm32
 board = nucleo_f446re
 framework = arduino
 upload_protocol = stlink
-build_src_flags = "+<…/demos>","+<./>"
+;build_src_flags = "+<…/demos>","+<./>"
