--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,9 @@
 platform = ststm32
 board = nucleo_f446re
 framework = arduino
+
 upload_protocol = stlink
+monitor_port = COM10
+monitor_speed = 115200
+
 ;build_src_flags = "+<…/demos>","+<./>"
